--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -371,7 +371,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-control-layers-expanded {
 	padding: 6px 10px 6px 6px;
 	color: #333;
-	background: #fff;
+	background: #F0F0F0;
 	}
 .leaflet-control-layers-scrollbar {
 	overflow-y: scroll;
